Mudando tela inicial
Tela inicial

--- a/BoscoGame/app/src/main/res/layout/activity_jogo.xml
+++ b/BoscoGame/app/src/main/res/layout/activity_jogo.xml
@@ -30,10 +30,6 @@
         android:id="@+id/imageView8"
         android:layout_width="60dp"
         android:layout_height="79dp"
-        android:layout_marginStart="67dp"
-        android:layout_marginLeft="67dp"
-        android:layout_marginEnd="68dp"
-        android:layout_marginRight="68dp"
         app:layout_constraintBottom_toTopOf="@+id/ImgSB4"
         app:layout_constraintEnd_toStartOf="@+id/imageView9"
         app:layout_constraintStart_toEndOf="@+id/imageView7"
@@ -53,9 +49,9 @@
         android:id="@+id/imageView3"
         android:layout_width="60dp"
         android:layout_height="79dp"
-        android:layout_marginStart="64dp"
-        android:layout_marginLeft="64dp"
         app:layout_constraintBottom_toTopOf="@+id/ImgSB8"
+        app:layout_constraintEnd_toStartOf="@+id/imageView4"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
         app:srcCompat="@drawable/toupeira" />
 
@@ -83,8 +79,8 @@
         android:id="@+id/imageView6"
         android:layout_width="60dp"
         android:layout_height="79dp"
-        android:layout_marginEnd="51dp"
-        android:layout_marginRight="51dp"
+        android:layout_marginEnd="48dp"
+        android:layout_marginRight="48dp"
         app:layout_constraintBottom_toTopOf="@+id/ImgSB6"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/toupeira" />
@@ -93,14 +89,9 @@
         android:id="@+id/ImgSB4"
         android:layout_width="92dp"
         android:layout_height="36dp"
-        android:layout_marginStart="44dp"
-        android:layout_marginLeft="44dp"
-        android:layout_marginEnd="43dp"
-        android:layout_marginRight="43dp"
-        android:layout_marginBottom="204dp"
+        android:layout_marginBottom="108dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/ImgSB7"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/ImgSB3"
         app:srcCompat="@drawable/buraco" />
 
@@ -108,9 +99,9 @@
         android:id="@+id/ImgSB7"
         android:layout_width="92dp"
         android:layout_height="36dp"
-        android:layout_marginEnd="36dp"
-        android:layout_marginRight="36dp"
-        android:layout_marginBottom="204dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginBottom="108dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/buraco" />
@@ -169,14 +160,12 @@
         android:id="@+id/ImgSB8"
         android:layout_width="92dp"
         android:layout_height="36dp"
-        android:layout_marginStart="44dp"
-        android:layout_marginLeft="44dp"
-        android:layout_marginEnd="43dp"
-        android:layout_marginRight="43dp"
-        android:layout_marginBottom="14dp"
+        android:layout_marginStart="38dp"
+        android:layout_marginLeft="38dp"
+        android:layout_marginEnd="33dp"
+        android:layout_marginRight="33dp"
         app:layout_constraintBottom_toTopOf="@+id/imageView"
         app:layout_constraintEnd_toStartOf="@+id/ImgSB5"
-        app:layout_constraintHorizontal_bias="0.416"
         app:layout_constraintStart_toEndOf="@+id/ImgSB1"
         app:srcCompat="@drawable/buraco" />
 
@@ -186,7 +175,6 @@
         android:layout_height="36dp"
         android:layout_marginEnd="36dp"
         android:layout_marginRight="36dp"
-        android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toTopOf="@+id/imageView6"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/buraco" />
@@ -197,7 +185,7 @@
         android:layout_height="36dp"
         android:layout_marginStart="28dp"
         android:layout_marginLeft="28dp"
-        android:layout_marginBottom="204dp"
+        android:layout_marginBottom="108dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/buraco" />
@@ -206,13 +194,9 @@
         android:id="@+id/ImgSB2"
         android:layout_width="92dp"
         android:layout_height="36dp"
-        android:layout_marginStart="48dp"
-        android:layout_marginLeft="48dp"
-        android:layout_marginEnd="39dp"
-        android:layout_marginRight="39dp"
         app:layout_constraintBottom_toTopOf="@+id/imageView8"
         app:layout_constraintEnd_toStartOf="@+id/ImgSB6"
-        app:layout_constraintHorizontal_bias="0.75"
+        app:layout_constraintHorizontal_bias="0.549"
         app:layout_constraintStart_toEndOf="@+id/imgSB9"
         app:srcCompat="@drawable/buraco" />
 
@@ -230,8 +214,8 @@
         android:id="@+id/ImgSB6"
         android:layout_width="92dp"
         android:layout_height="36dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginRight="32dp"
+        android:layout_marginEnd="36dp"
+        android:layout_marginRight="36dp"
         app:layout_constraintBottom_toTopOf="@+id/imageView9"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/buraco" />
@@ -242,7 +226,6 @@
         android:layout_height="36dp"
         android:layout_marginStart="28dp"
         android:layout_marginLeft="28dp"
-        android:layout_marginBottom="15dp"
         app:layout_constraintBottom_toTopOf="@+id/imageView5"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/buraco" />
@@ -253,10 +236,9 @@
         android:layout_height="79dp"
         android:layout_marginStart="66dp"
         android:layout_marginLeft="66dp"
-        android:layout_marginEnd="65dp"
-        android:layout_marginRight="65dp"
         app:layout_constraintBottom_toTopOf="@+id/ImgSB2"
         app:layout_constraintEnd_toStartOf="@+id/imageView6"
+        app:layout_constraintHorizontal_bias="0.014"
         app:layout_constraintStart_toEndOf="@+id/imageView5"
         app:srcCompat="@drawable/toupeira" />
 
