--- a/BoscoGame/app/src/main/res/layout/activity_tela_pause.xml
+++ b/BoscoGame/app/src/main/res/layout/activity_tela_pause.xml
@@ -5,20 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#D7D7D8"
+    android:visibility="visible"
     tools:context=".TelaPause">
 
     <Button
         android:id="@+id/BExit"
-        android:layout_width="102dp"
-        android:layout_height="124dp"
-        android:layout_marginStart="160dp"
-        android:layout_marginLeft="160dp"
-        android:layout_marginTop="164dp"
-        android:layout_marginEnd="160dp"
-        android:layout_marginRight="160dp"
+        android:layout_width="109dp"
+        android:layout_height="126dp"
+        android:layout_marginTop="192dp"
         android:drawableBottom="@drawable/sairpersonalizado"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -26,11 +22,7 @@
         android:id="@+id/BPlay"
         android:layout_width="111dp"
         android:layout_height="123dp"
-        android:layout_marginStart="160dp"
-        android:layout_marginLeft="160dp"
-        android:layout_marginEnd="160dp"
-        android:layout_marginRight="160dp"
-        android:layout_marginBottom="260dp"
+        android:layout_marginBottom="192dp"
         android:drawableBottom="@drawable/play__personalizado_"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
