--- a/BoscoGame/app/src/main/res/layout/activity_tela_creditos.xml
+++ b/BoscoGame/app/src/main/res/layout/activity_tela_creditos.xml
@@ -8,7 +8,7 @@
     tools:context=".TelaCreditos">
 
     <Button
-        android:id="@+id/BVoltTC"
+        android:id="@+id/BVoltaTC"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
