--- a/BoscoGame/app/src/main/res/layout/activity_tela_pause.xml
+++ b/BoscoGame/app/src/main/res/layout/activity_tela_pause.xml
@@ -10,21 +10,23 @@
 
     <Button
         android:id="@+id/BExit"
-        android:layout_width="109dp"
-        android:layout_height="126dp"
-        android:layout_marginTop="192dp"
-        android:drawableBottom="@drawable/sairpersonalizado"
+        android:layout_width="85dp"
+        android:layout_height="125dp"
+        android:layout_marginTop="240dp"
+        android:drawableTop="@drawable/sairpersonalizado"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.198"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/BPlay"
-        android:layout_width="111dp"
-        android:layout_height="123dp"
-        android:layout_marginBottom="192dp"
-        android:drawableBottom="@drawable/play__personalizado_"
+        android:layout_width="85dp"
+        android:layout_height="110dp"
+        android:layout_marginBottom="184dp"
+        android:drawableTop="@drawable/play__personalizado_"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.216"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
