--- a/BoscoGame/app/src/main/res/layout/activity_tela_creditos.xml
+++ b/BoscoGame/app/src/main/res/layout/activity_tela_creditos.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:backgroundTint="#343A40"
-        android:fontFamily="casual"
+        android:fontFamily="@font/press"
         android:text="Voltar"
         android:textStyle="bold"
         android:textColor="#ffffff"
