--- a/BoscoGame/app/src/main/res/layout/activity_tela_inicial.xml
+++ b/BoscoGame/app/src/main/res/layout/activity_tela_inicial.xml
@@ -21,18 +21,18 @@
 
     <TextView
         android:id="@+id/Lb1T2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="@string/app_name"
+        android:layout_width="295dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="28dp"
+        android:fontFamily="@font/press"
+        android:gravity="center_horizontal"
+        android:text="Dom Bosco e as Toupeiras"
         android:textAlignment="center"
-        android:textSize="25dp"
-        android:fontFamily="casual"
         android:textColor="#000000"
+        android:textSize="25dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ImgDB2"
-        android:gravity="center_horizontal" />
+        app:layout_constraintTop_toBottomOf="@+id/ImgDB2" />
 
     <Button
         android:id="@+id/BIniciar"
@@ -40,7 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
         android:backgroundTint="#343A40"
-        android:fontFamily="casual"
+        android:fontFamily="@font/press"
         android:text="Iniciar"
         android:textColor="#FFFFFF"
         android:textStyle="bold"
@@ -55,7 +55,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:backgroundTint="#343A40"
-        android:fontFamily="casual"
+        android:fontFamily="@font/press"
         android:text="Instruções"
         android:textColor="#FFFFFF"
         android:textStyle="bold"
@@ -69,7 +69,7 @@
         android:layout_height="48dp"
         android:layout_marginTop="10dp"
         android:backgroundTint="#343A40"
-        android:fontFamily="casual"
+        android:fontFamily="@font/press"
         android:text="Créditos"
         android:textColor="#FFFFFF"
         android:textStyle="bold"
